--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,18 +20,37 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Cache apt packages
+        uses: actions/cache@v4
         with:
-          python-version: "3.11"
-          cache: "pip"
+          path: |
+            /var/cache/apt/archives
+            /var/lib/apt/lists
+          key: ${{ runner.os }}-apt-gdal-${{ hashFiles('.github/workflows/checks.yml') }}
+          restore-keys: |
+            ${{ runner.os }}-apt-gdal-
 
       - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y gdal-bin libgdal-dev
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Cache Python environment
+        uses: actions/cache@v4
+        id: cache-python-env
+        with:
+          path: ${{ env.pythonLocation }}
+          key: ${{ runner.os }}-python-env-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-python-env-
+
       - name: Install dependencies
+        if: steps.cache-python-env.outputs.cache-hit != 'true'
         run: pip install -r requirements.txt
 
       - name: Run pre-commit hooks
