--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ requests>=2.26.0
 safetensors>=0.3.0
 scipy>=1.7.0
 shapely>=2.0.0
-
+smoothify==0.1.3
 torch>=2.0.0
 torchvision>=0.15.0
 tqdm>=4.60.0
